--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
     "cross-env": "^7.0.3",
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-solid": "^2.11.0"
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "@koa/router": "^13.1.0",
-    "@leafer-in/editor": "^1.2.1",
-    "@leafer-in/flow": "^1.2.1",
-    "@leafer-in/text-editor": "^1.2.1",
-    "@leafer-ui/node": "^1.2.1",
+    "@leafer-in/editor": "^1.3.2",
+    "@leafer-in/flow": "^1.3.2",
+    "@leafer-in/text-editor": "^1.3.2",
+    "@leafer-ui/node": "^1.3.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-cors": "^0.0.16",
     "koa-router": "^13.0.1",
-    "leafer-ui": "^1.2.1",
+    "leafer-ui": "^1.3.2",
+    "leafer-x-dot-matrix": "^1.0.2",
+    "leafer-x-snap": "^1.0.7",
     "puppeteer": "^23.11.1",
     "skia-canvas": "^2.0.1",
-    "ts-node": "^10.9.2"
+    "solid-js": "^1.9.4",
+    "ts-node": "^10.9.2",
+    "uuid": "^11.0.5"
   }
 }
