--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "dev": "cross-env RUNTIME=WEB bunx --bun vite",
     "build": "cross-env RUNTIME=WEB tsc && bunx --bun vite build",
-    "http": "npx ts-node ./src/http/index.ts"
+    "http": "npx ts-node ./src/http/index.ts",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop label-engine && pm2 delete label-engine"
   },
   "devDependencies": {
     "@types/koa-cors": "^0.0.6",
     "@types/koa-router": "^7.4.8",
     "@types/node": "^22.10.2",
     "cross-env": "^7.0.3",
+    "pm2": "^5.4.3",
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
